// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Connected/Item with done item 1`] = `
<Item item={{"name":"Buy Groceries","category":"Ingredients","description":"1x Tomato, 1x Onion, 1x Spaghetti","status":"done","created":"3h"}} store={{}} onNameChange={"function"} onUpdateStatus={"function"} onEditItem={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Card className={"item"} tag={"div"}>
    <div className={"item card"}>
      <ItemHeader name={"Buy Groceries"} created={"3h"} onNameChange={"function"}>
        <CardHeader tag={"div"}>
          <div className={"card-header"}>
            <div className={"item-header"}>
              <FormInput className={"item-name-input"} value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"}>
                <input value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"} className={"item-name-input form-control"} />
              </FormInput>
              <Badge className={"item-time-pill"} pill={true} theme={"secondary"} outline={false} tag={"span"}>
                <span className={"item-time-pill badge badge-secondary badge-pill"}>
                  NaN days
                </span>
              </Badge>
            </div>
          </div>
        </CardHeader>
      </ItemHeader>
      <ItemBody category={"Ingredients"} description={"1x Tomato, 1x Onion, 1x Spaghetti"} onEditItem={"function"}>
        <CardBody className={"item-body"} onClick={"function"} tag={"div"}>
          <div onClick={"function"} className={"item-body card-body"}>
            <CardSubtitle tag={"h6"}>
              <h6 className={"card-subtitle text-muted"}>
                Ingredients
              </h6>
            </CardSubtitle>
            1x Tomato, 1x Onion, 1x Spaghetti
          </div>
        </CardBody>
      </ItemBody>
      <ItemStatus status={"done"} onUpdateStatus={"function"}>
        <CardFooter tag={"div"}>
          <div className={"card-footer"}>
            <div className={"item-status"}>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  Ready
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  In Progress
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"success"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-success badge-pill"}>
                  Done
                </span>
              </Badge>
            </div>
          </div>
        </CardFooter>
      </ItemStatus>
    </div>
  </Card>
</Item>
`;

exports[`Storyshots Connected/Item with in progress item 1`] = `
<Item item={{"name":"Buy Groceries","category":"Ingredients","description":"1x Tomato, 1x Onion, 1x Spaghetti","status":"in progress","created":"3h"}} store={{}} onNameChange={"function"} onUpdateStatus={"function"} onEditItem={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Card className={"item"} tag={"div"}>
    <div className={"item card"}>
      <ItemHeader name={"Buy Groceries"} created={"3h"} onNameChange={"function"}>
        <CardHeader tag={"div"}>
          <div className={"card-header"}>
            <div className={"item-header"}>
              <FormInput className={"item-name-input"} value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"}>
                <input value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"} className={"item-name-input form-control"} />
              </FormInput>
              <Badge className={"item-time-pill"} pill={true} theme={"secondary"} outline={false} tag={"span"}>
                <span className={"item-time-pill badge badge-secondary badge-pill"}>
                  NaN days
                </span>
              </Badge>
            </div>
          </div>
        </CardHeader>
      </ItemHeader>
      <ItemBody category={"Ingredients"} description={"1x Tomato, 1x Onion, 1x Spaghetti"} onEditItem={"function"}>
        <CardBody className={"item-body"} onClick={"function"} tag={"div"}>
          <div onClick={"function"} className={"item-body card-body"}>
            <CardSubtitle tag={"h6"}>
              <h6 className={"card-subtitle text-muted"}>
                Ingredients
              </h6>
            </CardSubtitle>
            1x Tomato, 1x Onion, 1x Spaghetti
          </div>
        </CardBody>
      </ItemBody>
      <ItemStatus status={"in progress"} onUpdateStatus={"function"}>
        <CardFooter tag={"div"}>
          <div className={"card-footer"}>
            <div className={"item-status"}>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  Ready
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"warning"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-warning badge-pill"}>
                  In Progress
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  Done
                </span>
              </Badge>
            </div>
          </div>
        </CardFooter>
      </ItemStatus>
    </div>
  </Card>
</Item>
`;

exports[`Storyshots Connected/Item with in ready item 1`] = `
<Item item={{"name":"Buy Groceries","category":"Ingredients","description":"1x Tomato, 1x Onion, 1x Spaghetti","status":"ready","created":"3h"}} store={{}} onNameChange={"function"} onUpdateStatus={"function"} onEditItem={"function"} storeSubscription={{"store":{},"listeners":{}}}>
  <Card className={"item"} tag={"div"}>
    <div className={"item card"}>
      <ItemHeader name={"Buy Groceries"} created={"3h"} onNameChange={"function"}>
        <CardHeader tag={"div"}>
          <div className={"card-header"}>
            <div className={"item-header"}>
              <FormInput className={"item-name-input"} value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"}>
                <input value={"Buy Groceries"} placeholder={"Buy Groceries"} onChange={"function"} className={"item-name-input form-control"} />
              </FormInput>
              <Badge className={"item-time-pill"} pill={true} theme={"secondary"} outline={false} tag={"span"}>
                <span className={"item-time-pill badge badge-secondary badge-pill"}>
                  NaN days
                </span>
              </Badge>
            </div>
          </div>
        </CardHeader>
      </ItemHeader>
      <ItemBody category={"Ingredients"} description={"1x Tomato, 1x Onion, 1x Spaghetti"} onEditItem={"function"}>
        <CardBody className={"item-body"} onClick={"function"} tag={"div"}>
          <div onClick={"function"} className={"item-body card-body"}>
            <CardSubtitle tag={"h6"}>
              <h6 className={"card-subtitle text-muted"}>
                Ingredients
              </h6>
            </CardSubtitle>
            1x Tomato, 1x Onion, 1x Spaghetti
          </div>
        </CardBody>
      </ItemBody>
      <ItemStatus status={"ready"} onUpdateStatus={"function"}>
        <CardFooter tag={"div"}>
          <div className={"card-footer"}>
            <div className={"item-status"}>
              <Badge className={"item-status-pill"} pill={true} theme={"danger"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-danger badge-pill"}>
                  Ready
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  In Progress
                </span>
              </Badge>
              <Badge className={"item-status-pill"} pill={true} theme={"light"} onClick={"function"} outline={false} tag={"span"}>
                <span onClick={"function"} className={"item-status-pill badge badge-light badge-pill"}>
                  Done
                </span>
              </Badge>
            </div>
          </div>
        </CardFooter>
      </ItemStatus>
    </div>
  </Card>
</Item>
`;
